[WIP] delivery_cl_express: 2nd review in formula and connection. Include the option to fix the api token different for test and production. Add a selector to say if we are going to connect in test or in production.

--- a/delivery_cl_express/views/delivery_cl_express_view.xml
+++ b/delivery_cl_express/views/delivery_cl_express_view.xml
@@ -9,7 +9,9 @@
         <xpath expr="//page[@name='destination']" position='before'>
             <page string="Chile Express Configuration" attrs="{'invisible': [('delivery_type', '!=', 'clexp')]}">
                 <group>
-                        <field name="clexp_API" attrs="{'required': [('delivery_type', '=', 'clexp')]}"/>
+                    <field name="chilexpress_url" widget="radio"/>
+                    <field name="chilexpress_api_test" attrs="{'required': [('delivery_type', '=', 'chilexpress'), ('chilexpress_url', '=', 'test')], 'invisible': [('chilexpress_url', '!=', 'test')]}"/>
+                    <field name="chilexpress_api_prd" attrs="{'required': [('delivery_type', '=', 'chilexpress'), ('chilexpress_url', '=', 'prd')], 'invisible': [('chilexpress_url', '!=', 'prd')]}"/>
                 </group>
             </page>
         </xpath>
